# rust_api_light_simple

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
src/: auth.rs  config.rs  error.rs  items.rs  lib.rs  main.rs  pastes.rs  schema.rs
tests/: api_tests.rs  auth_tests.rs  config_tests.rs  item_validation_tests.rs  paste_validation_tests.rs  schema_tests.rs
